// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pbehavior-recurrence-rule-exceptions-field Renders \`pbehavior-exceptions-field\` with custom props 1`] = `
<div>
  <h3
    class="grey--text"
  >
    Exception dates
  </h3>
  <pbehavior-exceptions-list-stub
    exceptions="[object Object]"
  />
  <div
    disabled="disabled"
    value="[object Object],[object Object]"
    with-exdate-type="true"
  >
    <c-alert-stub
      type="info"
    >
      No exceptions added yet
    </c-alert-stub>
     
    <button
      class="ml-0 v-btn theme--light primary"
      type="button"
    >
      <div
        class="v-btn__content"
      >
        Add an exception date
      </div>
    </button>
    <pbehavior-recurrence-rule-exceptions-list-menu-stub
      value="[object Object]"
    />
  </div>
</div>
`;

exports[`pbehavior-recurrence-rule-exceptions-field Renders \`pbehavior-exceptions-field\` with default props 1`] = `
<div>
  <h3
    class="grey--text"
  >
    Exception dates
  </h3>
  <!---->
  <div
    value=""
  >
    <c-alert-stub
      type="info"
      value="true"
    >
      No exceptions added yet
    </c-alert-stub>
     
    <button
      class="ml-0 v-btn theme--light primary"
      type="button"
    >
      <div
        class="v-btn__content"
      >
        Add an exception date
      </div>
    </button>
    <pbehavior-recurrence-rule-exceptions-list-menu-stub
      value=""
    />
  </div>
</div>
`;
